fixed layout issue for upcoming shows in desktop view

--- a/style.css
+++ b/style.css
@@ -494,7 +494,7 @@ footer {
   #upcoming-shows {
     width: 100%;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
   }
 
   .show-data {
